deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: node-api
        image: registryldcp.azurecr.io/node-api:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: node-api
  namespace: api
spec:
  ports:
    - port: 80
  selector: 
    app: node-api
  type: LoadBalancer
