ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-api
spec:
  tls:
  - hosts:
    - api.service-arthur.net
    secretName: wildcard-api
  rules:
  - host: api.service-arthur.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-api
            port:
              number: 80
